# gnome-alsamixer

./: .gitignore  0  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in~  config.status  configure  configure.ac  gnome-alsamixer.schemas  gnome-alsamixer.spec  gnome-alsamixer.spec.in
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: Default.properties
pixmaps/: gnome-alsamixer-icon.xpm
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  az.po  ca.po  cs.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gnome-alsamixer.pot  hr.po  hu.po  ja.po  mk.po  mn.po  nb.po  ne.po  nl.po  pa.po  pt.po  pt_BR.po  sk.po  sq.po  sr.po  sr@Latn.po  sv.po  th.po  uk.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile  Makefile.am  Makefile.in  gam-app.c  gam-app.h  gam-enum.c  gam-enum.h  gam-main.c  gam-mixer.c  gam-mixer.h  gam-prefs-dlg.c  gam-prefs-dlg.h  gam-props-dlg.c  gam-props-dlg.h  gam-slider-dual.c  gam-slider-dual.h  gam-slider-pan.c  gam-slider-pan.h  gam-slider.c  gam-slider.h  gam-toggle.c  gam-toggle.h  gnome-alsamixer
src/.deps/: gam-app.Po  gam-enum.Po  gam-main.Po  gam-mixer.Po  gam-prefs-dlg.Po  gam-props-dlg.Po  gam-slider-dual.Po  gam-slider-pan.Po  gam-slider.Po  gam-toggle.Po
